# valhalla

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.odin  LICENSE  Makefile  Readme.md  docker-compose.yaml
configuration/: base.yaml  local.yaml
frontend/: Dockerfile.frontend  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ProcessMonitor.jsx  SystemDashboard.jsx
src/: configuration.rs  lib.rs  main.rs  monitor.rs  telemetry.rs  utils.rs
src/cache/: blob.rs  mod.rs
src/memory/: blob.rs  mod.rs
src/ollama/: client.rs  mod.rs  ollama_types.rs  prompts.rs
src/os_tooling/: file_monitor.rs  mod.rs  scanner.rs  system_resources.rs
src/os_tooling/resources/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/web/: app.rs  mod.rs
src/web/routes/: api.rs  mod.rs
tests/monitor/: main.rs  monitors.rs
tests/system/: helpers.rs  main.rs  scanner.rs
