[package]
name = "odin"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "odin"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.19"
sysinfo = {version ="0.33.1",default-features = false, features = ["system","disk","component","user","network"]}
thiserror = "2.0.9"
serde_json = "1.0.134"
config = "0.15.5"
metrics = "0.24.1"
metrics-exporter-tcp = "0.11.0"
chrono = "0.4.39"
axum = "0.8.1"
